[package]
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
description = "Peripheral access API for MKW41Z4 microcontrollers"
documentation = "https://docs.rs/mkw41z4"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT"
name = "mkw41z4"
repository = "https://github.com/ilya-epifanov/mkw41z4"
version = "0.1.0"

[dependencies]
cortex-m = "0.3.0"
bare-metal = "0.1.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.3"

[features]
rt = ["cortex-m-rt"]
